--- a/Mascota/nbproject/private/private.properties
+++ b/Mascota/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\DELL Inspiron\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\raynn\\AppData\\Roaming\\NetBeans\\17\\build.properties
